Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34396

Custom particle example not working correctly with new batched renderer

    XMLWordPrintable

Details

    • d232fa7c8cd01364d32a95eef7e711f3ae857d2c

    Description

      The customparticles example in the qtdeclarative module has issues when using the new batched SG renderer.

      The particles are created but fail to be rendered until the window is resized.

      To reproduce this

      1) Launch custoparticles example and choose the fragment shader example for e.g.
      2) Note that the emission of particles seems to stop.
      3) Resize the window a little to get another apparent burst

      I think that the particles are being created correctly but for some reason they are not being added to batches by the new renderer (until the window resize forces some other code path).

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            sletta Gunnar Sletta
            seanharmer Sean Harmer
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes