Make sure custom particles mark themselves dirty.

Task-number: QTBUG-34396

Change-Id: I3a012166489cb36b923ff794bf9ac26c4bae0508
Reviewed-by: Sean Harmer <sean.harmer@kdab.com>